FlightPath 5.x Changelog
========================

2016-05-16
  Added a new hook to let other modules decide if a course should be assigned to a particular degree or not.
  
  Removed some redundant database queries to help reduce queries per page load.


2016-05-11
  Added to AdvisingScreen so we add extra classes when a course appears in more than one degree.
    

2016-05-10
  Created an array in DegreePlan to keep track of every course that degree can possibly use.
  
  Added to $theme when drawing course rows, so we can move the degree_plan around as well.


2016-05-06
  Fixed bug in _CourseList.php, where min_grade wasn't being accurately taken into account when searching for find_best_match() courses.
  
  Added CSS class to the body tag to state what the student's rank is.
  
  Made it so any rendered button gets its title as its class, for extra CSS styling.
  

2016-04-22
  Added ability to "view/print all" advising histories, just like the comments.
  
  Added track descriptions to what if selection screen


2016-04-19
  Made various changes in AdvisingScreen, and added a new hook, so that course rows could be further themed by
  modules, before they are drawn on screen.  This is partially so that the prereqs module will more easily work.
  
  Added better CSS to admin.degrees.inc.

2016-04-14
  Added extra functionality to CourseList.
  

2016-04-09
  To prepare for dealing with prereqs, I changed the way the draw_course_row function is written in AdvisingScreen,
  to allow hooks to change elements of it.
  

2016-04-06
  Fixed isses with db queries which specified '?~?' or similar syntax, which is incompatible with the new PDO system.
  
  Changed checkboxes to use spans with classes for graphics, so we can easily overwrite as needed.
  

2016-04-05
  Replaced some hard-coded values with constants.
  
  Fixed bug with group titles in view and what if.

  Fixed mysql bug in course_search.module, fixed various issues which were causing "notices".
  
