@@ -1535,6 +1535,8 @@ class _DatabaseHandler extends stdClass
     // GSBA|_123  or  KIND|EXCP_231.
     // In other words, all in one.
 
+    $bool_use_draft = FALSE;
+    
     // Always override if the global variable is set.
     if (@$GLOBALS["fp_advising"]["bool_use_draft"] == true) {
       $bool_use_draft = true;
@@ -1562,6 +1564,35 @@ class _DatabaseHandler extends stdClass
 
   }
 
+
+  // Returns a simple array of all degree_id's which match this major code, any catalog year.
+  function get_degree_ids($major_code) {
+
+    $rtn = array();
+
+    $bool_use_draft = FALSE;
+
+    // Always override if the global variable is set.
+    if (@$GLOBALS["fp_advising"]["bool_use_draft"] == true) {
+      $bool_use_draft = true;
+    }
+    
+    $table_name = "degrees";
+    if ($bool_use_draft){$table_name = "draft_$table_name";}
+    
+    $res7 = $this->db_query("SELECT * FROM $table_name
+                            WHERE major_code = ?              
+                            ", trim($major_code)) ;
+    
+    while ($cur7 = $this->db_fetch_array($res7)) {      
+      $rtn[$cur7["degree_id"]] = $cur7["degree_id"];
+    }
+    
+    
+    return $rtn;
+    
+    
+  } // get_degree_ids
 
 
 
